--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="js/index.js"></script>
+  <script src="js/idb.js"></script>
 </body>
 
 <script>
